tests/baselines/reference/crashIntypeCheckObjectCreationExpression.errors.txt
crashIntypeCheckObjectCreationExpression.ts(3,45): error TS2095: Could not find symbol 'X'.
